--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,3 +6,11 @@
   min-height: 600px;
   color: white;
 }
+
+.img-clea {
+  width: 100%;
+  height: 600px;
+  max-width: 900px;
+  min-width: 540px;
+  mix-blend-mode: lighten;
+}
