--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,8 +9,15 @@
 
 .img-clea {
   width: 100%;
-  height: 600px;
   max-width: 900px;
   min-width: 540px;
+  height: 600px;
+  mix-blend-mode: lighten;
+}
+
+.img-wanda {
+  width: 100%;
+  min-width: 400px;
+  height: 600px;
   mix-blend-mode: lighten;
 }
