--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,3 +21,14 @@
   height: 600px;
   mix-blend-mode: lighten;
 }
+
+.div-meio {
+  width: 100%;
+  height: 600px;
+}
+
+.img-circulo {
+  width: 100%;
+  max-height: 600px;
+  mix-blend-mode: screen;
+}
