--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,3 @@
-body {
-  color: white;
-  background-color: black;
-
-}
-
 .div-secao-principal {
   background-image: url('../../assets/img/secao-principal/fundo.jpg');
   background-position: center;
@@ -12,6 +6,14 @@ body {
   min-height: 600px;
   color: white;
 }
+
+@media(max-width: 500px) {
+  .div-secao-principal {
+    min-width: 450px;
+  }
+}
+
+
 
 .img-clea {
   width: 100%;
